# canteen

./: .gitignore  docker-compose.yml  readme.md
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: applications.py  auth.py  dishes.py  ingredients.py  menu.py  notifications.py  orders.py  reports.py  reviews.py  statistics.py  subscriptions.py  users.py
backend/app/core/: config.py  enums.py  websockets_manager.py
backend/app/core/security/: auth.py  jwt.py  password.py
backend/app/core/utils/: generation.py  pdf_gen.py  statistics.py
backend/app/crud/: application.py  blacklisted_token.py  dish.py  ingredient.py  menu.py  notification.py  order.py  paginating.py  reports.py  review.py  statistic.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  application.py  associations.py  base.py  blacklisted_token.py  dish.py  menu.py  notification.py  order.py  report.py  review.py  user.py
backend/app/schemas/: annotations.py  application.py  auth.py  dish.py  item.py  menu.py  notification.py  order.py  paginating.py  report.py  review.py  statistic.py  subscription.py  user.py  validation.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/api/: applications.ts  auth.ts  client.ts  dishes.ts  errors.ts  index.ts  ingredients.ts  menu.ts  notifications.ts  orders.ts  reports.ts  reviews.ts  statistics.ts  subscriptions.ts  users.ts
(+48 files in other folders)
