[project]
name = "backend"
version = "0.1.0"
description = "Nothing!!!"
readme = "../README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.128.0",
    "ptext>=1.1.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "python-pptx>=1.0.2",
    "reportlab>=4.4.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
